Change px values to rem
Changed px values to rem for better responsive design.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link href="styles.css" rel="stylesheet" />
+    <link href="inquires.css" rel="stylesheet" />
     <title>Frontend Mentor | Recipe page</title>
   </head>
   <body>
