Make design responsive
Used media queries to make the design responsive. Website is now mobile friendly!

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link href="styles.css" rel="stylesheet" />
-    <link href="inquires.css" rel="stylesheet" />
+    <link href="queries.css" rel="stylesheet" />
     <title>Frontend Mentor | Recipe page</title>
   </head>
   <body>
@@ -36,12 +36,14 @@
         alt="omelette"
         class="recipe-img border-round"
       />
-      <h1 class="title">Simple Omelette Recipe</h1>
-      <p class="description">
-        An easy and quick dish, perfect for any meal. This classic omelette
-        combines beaten eggs cooked to perfection, optionally filled with your
-        choice of cheese, vegetables, or meats.
-      </p>
+      <section class="title-cont">
+        <h1 class="title">Simple Omelette Recipe</h1>
+        <p class="description">
+          An easy and quick dish, perfect for any meal. This classic omelette
+          combines beaten eggs cooked to perfection, optionally filled with your
+          choice of cheese, vegetables, or meats.
+        </p>
+      </section>
       <section class="preparation-cont">
         <h3 class="preparation-title">Preparation time</h3>
         <ul class="preparation-ul">
