--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
         </div>
       </section>
     </div>
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Viktor Kolev</a>.
-    </div>
+    </footer>
   </body>
 </html>
