--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <title>Frontend Mentor | Recipe page</title>
   </head>
   <body>
-    <div class="container border-round">
+    <main class="container border-round">
       <img
         src="assets/images/image-omelette.jpeg"
         alt="omelette"
@@ -146,7 +146,7 @@
           </table>
         </div>
       </section>
-    </div>
+    </main>
     <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
